--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,17 +6,34 @@
     android:layout_height="match_parent"
     tools:context="com.msquared.physicskinematics.MainActivity">
 
-    <TextView
-        android:id="@+id/gameRotation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="452dp"
-        android:layout_marginEnd="308dp"
-        android:layout_marginStart="76dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+    <RelativeLayout
+        android:id="@+id/layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="208dp">
+
+        <TextView
+            android:id="@+id/tapped"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/gameRotation"
+            android:layout_marginStart="160dp"
+            android:layout_marginTop="243dp"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/gameRotation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignStart="@+id/tapped"
+            android:layout_marginTop="19dp"
+            android:text="TextView"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent" />
+    </RelativeLayout>
+
 
 </android.support.constraint.ConstraintLayout>
