--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginBottom="60dp"
         android:layout_marginEnd="80dp"
         android:layout_marginStart="80dp"
-        android:background="@android:color/holo_green_light"
+        android:background="#5dccff"
         android:onClick="onButtonClick"
         android:text="START"
         android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
@@ -27,6 +27,7 @@
         android:layout_height="0dp"
         android:layout_marginBottom="20dp"
         android:ems="10"
+        android:hint="Distance from Object"
         android:inputType="numberDecimal"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,16 +45,47 @@
         app:layout_constraintTop_toTopOf="@+id/editText"
         tools:ignore="MissingConstraints" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="200dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_launcher512" />
+
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
+        android:layout_height="17dp"
+        android:layout_marginBottom="2dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/introduction"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        app:layout_constraintBottom_toTopOf="@+id/textView7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
-        android:layout_marginBottom="20dp"
-        android:text="@string/home_instructions"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:text="@string/intro_part2"
+        android:textAppearance="@style/TextAppearance.AppCompat"
         app:layout_constraintBottom_toTopOf="@+id/editText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
 </android.support.constraint.ConstraintLayout>
